--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <h2>Why Download This Book</h2>
     <div class="feature-grid">
       <div class="feature">
-        <h3>📕 Amazon ASIN Based</h3>
-        <p>Cover image generated directly from ASIN.</p>
+        <h3>⭐ Top Rated</h3>
+        <p>Loved by thousands of readers with high ratings and reviews.</p>
       </div>
       <div class="feature">
         <h3>⚡ Fast Download</h3>
